# proka-kernel

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  linker.ld
.github/workflows/: build.yml
assets/: README.md  libhal.a.dis
assets/rootfs/limine/: limine.conf
boot/: Makefile  cpuid.asm  header.asm  loader.asm  paging.asm
kernel/: .gitignore  Cargo.toml  Kconfig.toml  Makefile  build.rs  kernel  linker.ld
kernel/fonts/: default.bmf
kernel/src/: Kconfig.toml  lib.rs  main.rs  output.rs  panic.rs  test.rs
kernel/src/drivers/: block.rs  device.rs  mod.rs
kernel/src/drivers/block/: mod.rs  ramblk.rs  ramfs.rs
kernel/src/drivers/char/: mod.rs  serial.rs
kernel/src/drivers/input/: keyboard.rs  mod.rs
kernel/src/fs/: bio.rs  kernfs.rs  memfs.rs  mod.rs  vfs.rs
kernel/src/graphics/: color.rs  core.rs  mod.rs
kernel/src/interrupts/: apic.rs  error_handler.rs  gdt.rs  handler.rs  idt.rs  mod.rs  msr.md  pic.rs
kernel/src/lib/: memory.rs  panic.rs
kernel/src/libs/: Kconfig.toml  bmp.rs  initrd.rs  logger.rs  mod.rs  msr.rs
kernel/src/libs/time/: mod.rs  pit.rs  tsc.rs
kernel/src/memory/: Kconfig.toml  allocator.rs  frame_allocator.rs  mapper.rs  mod.rs  paging.rs  protection.rs  talcalloc.rs
kernel/src/memory/paging/: frame.rs  mod.rs  table.rs
kernel/src/output/: Kconfig.toml  bmf.rs  console.rs  dual.rs  font8x16.rs  framebuffer.rs  mod.rs  serial.rs
kernel/src/process/: task.rs
scripts/: run.py  run.sh
scripts/font/: README.md  make_charset.py  make_font.py
src/: Makefile  lib.rs  main.rs
src/asm/: Makefile  loader.asm
src/c/: Makefile
src/kernel/: output.rs
tests/: Makefile
