[workspace]
members = ["kernel"]
resolver = "2"

[workspace.package]
edition = "2024"
repository = "https://github.com/RainSTR-Studio/proka-kernel"
authors = ["RainSTR Studio"]

[workspace.dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
multiboot2 = { version = "0.23.1", default-features = false }
paste = "1.0.15"
x86_64 = "0.15.2"
uart_16550 = "0.3.2"
spin = "0.10.0"
libm = "0.2.15"
linked_list_allocator = "0.9.0"
