[package]
name = "proka-kernel"
version = "0.1.0"
edition = "2024"

[build-dependencies]
glob = "0.3.0"

[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
limine = "0.5.0"
linked_list_allocator = "0.10.5"
paste = "1.0.15"
spin = "0.10.0"
uart_16550 = "0.4.0"
x86_64 = "0.15.2"
