[package]
name = "proka-kernel"
version = "0.1.0"
edition = "2021"

[build-dependencies]
glob = "0.3.0"

[dependencies]
ab_glyph = { version = "0.2.31", default-features = false, features = ["libm"] }
bitmap-allocator = "0.2.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
libm = "0.2.15"
limine = "0.5.0"
linked_list_allocator = "0.10.5"
log = "0.4.27"
paste = "1.0.15"
pic8259 = "0.11.0"
raw-cpuid = "11.5.0"
spin = "0.10.0"
uart_16550 = "0.4.0"
x86_64 = "0.15.2"
