[package]
name = "proka-kernel"
version = "0.1.0"
edition = "2021"

[build-dependencies]
anaxa-builder = "0.3.5"
glob = "0.3.0"

[dependencies]
bitmap-allocator = "0.2.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
limine = "0.5.0"
log = "0.4.27"
paste = "1.0.15"
pic8259 = "0.11.0"
raw-cpuid = "11.5.0"
spin = "0.10.0"
talc = "4.4.3"
uart_16550 = "0.4.0"
x86_64 = "0.15.2"
pc-keyboard = "0.7.0"
acpi = "6.0.1"
